--- a/src/Todos/NewTodo/NewTodo.css
+++ b/src/Todos/NewTodo/NewTodo.css
@@ -2,3 +2,30 @@
   margin-top: 1%;
   width: 80%;
 }
+
+.new-todo__Modal {
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  margin-top: 10%;
+  background: hsl(0, 0%, 100%);
+  width: 25%;
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+.new-todo form {
+  margin: 1rem;
+  content: center;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-todo label {
+  display: flex;
+  margin-left: 5%;
+}
